--- a/app/views/client/verifications/new.html.slim
+++ b/app/views/client/verifications/new.html.slim
@@ -33,7 +33,8 @@
           .col-md-6
             = f.input :citizenship_country_iso_code,
                     as: :select,
-                    collection: country_options_for_select
+                    collection: country_options_for_select,
+                    input_html: { class: 'custom-select' }
             = f.input :birth_date, as: :date_picker, icons: :font_awesome
             = f.input :email, as: :email
 
