--- a/app/views/client/verifications/created.slim
+++ b/app/views/client/verifications/created.slim
@@ -2,7 +2,7 @@
   .container
     .d-flex.align-items-center.justify-content-between.my-3
       div
-        h1.h3.font-weight-semibold =t '.title'
+        h1.h3.font-weight-semibold =t '.title', id: verification.id
         h4.h6.font-weight-normal = verification.id
       div
         = image_tag asset_url('bz-logo.svg'), width: 40
